<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:id="@+id/mainActivityApp"
    android:name="@string/app_name"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    android:weightSum="1">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_User"
        android:labelFor="@+id/spinner_payer"/>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_payer"
        android:prompt="@string/select_payer"
        android:dropDownSelector="@drawable/abc_list_longpressed_holo"
        android:spinnerMode="dropdown"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_expenseType"
        android:labelFor="@+id/spinner_expenseType"/>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_expenseType"
        android:prompt="@string/select_payer"
        android:dropDownSelector="@drawable/abc_list_longpressed_holo"
        android:spinnerMode="dropdown"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        />

</LinearLayout>
<!--<fragment xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment"
    android:name="com.parlakovi.petqjoro.ourbudget.MainActivityFragment"
    tools:layout="@layout/fragment_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent" />-->
